# rusty-notes

./: Cargo.toml  Makefile  README.md
assets/: hello-world.md  math-000.md
assets/css/: notes.css  pygments.css  syntect.css
assets/js/: notes.js
assets/templates/notes/: base.html  create.html  detail.html  edit.html  home.html
docs/: put-rusty-notes-behind-nginx.md
src/: cache.rs  config.rs  highlighter.rs  main.rs  templates.rs  tools.rs  types.rs
src/notes/: mod.rs  search.rs  utils.rs  web.rs
